--- a/py05_입출력제어.ipynb
+++ b/py05_입출력제어.ipynb
@@ -366,7 +366,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 20,
    "id": "c5198a0f-a8d5-4f58-b755-6f7b20c3ef3a",
    "metadata": {},
    "outputs": [
@@ -389,8 +389,473 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 27,
+   "id": "66635e8d-1716-4f33-946c-3377e1af7224",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "/bin/bash: line 1: pyhton3: command not found\n"
+     ]
+    }
+   ],
+   "source": [
+    "!pyhton3 args_test.py 12 34 56"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "id": "a05ef9ec-68d9-4ae5-92d6-018ce596e31b",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "당신의 이름은? cjh\n",
+      "당신의 나이는? 22\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "입력 되었습니다\n"
+     ]
+    }
+   ],
+   "source": [
+    "name = input(\"당신의 이름은?\")\n",
+    "age = input(\"당신의 나이는?\")\n",
+    "with open('.test_note.txt','a') as f:\n",
+    "    f.write(name +\" \"+ age+\"\\n\")\n",
+    "print(\"입력 되었습니다\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "96aaf677-89b2-4b52-904c-c1b0447cc374",
+   "metadata": {},
+   "source": [
+    "## 클래스"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "id": "25631321-0b9d-4f73-b07c-2791301a9691",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 불편한 코드\n",
+    "result1 = 0\n",
+    "result2 = 0\n",
+    "\n",
+    "def add1(num):\n",
+    "    global result1\n",
+    "    result1 += num  # 결괏값(result)에 입력값(num) 더하기\n",
+    "    return result1  # 결괏값 리턴\n",
+    "\n",
+    "def add2(num):\n",
+    "    global result2\n",
+    "    result2 += num  # 결괏값(result)에 입력값(num) 더하기\n",
+    "    return result2  # 결괏값 리턴  "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "c89242a1-d54b-4bc0-b6a2-4dcbc9b7970f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 클래스 사용\n",
+    "\n",
+    "class Cal:\n",
+    "    def __init__(self):\n",
+    "        self.result = 0\n",
+    "        \n",
+    "    def add(self, num):\n",
+    "        self.result += num\n",
+    "        return self.result\n",
+    "\n",
+    "    def mul(self, num):\n",
+    "        self.result *= num\n",
+    "        return self.result"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "a11a8d53-99f6-4afb-a24d-da6e62a03e6a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cal1 = Cal()\n",
+    "cal2 = Cal()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "id": "71d8bf71-ad9a-478a-8a94-cc13a03f9129",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "138\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(cal1.add(3))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "id": "8c65bd85-76dd-43ec-8805-383608a67aa9",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "135\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(cal1.mul(3))"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "3847c641-bdd8-484f-8128-4143370ebfa3",
+   "id": "46ea9fea-6afa-449c-870a-2ab39bf5b91a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 클래스의 기본 뼈대\n",
+    "class Bungbbang:\n",
+    "    pass\n",
+    "\n",
+    "a = Bungbbang()\n",
+    "\n",
+    "# 객체와 인스턴스 차이\n",
+    "# 인스턴스(instance) = 클래스(class)로부터 실제로 만들어진 과제(object)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "id": "eb1b17c5-6f0d-4d1f-b710-0432d92093de",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 클래스 구조 만들기\n",
+    "class FourCal:\n",
+    "    def setdata(self, a, b):\n",
+    "        self.first = a\n",
+    "        self.second = b\n",
+    "    def prints(self):\n",
+    "        print(self.first ,self.second)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "id": "bbdac78d-29e8-4302-9649-bf82ae094ec0",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "four1 = FourCal()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "id": "b9571800-fe5c-46b3-af01-e7275661707a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "four1.setdata(3, 4)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "id": "97ff7af3-b7c1-4d67-900d-3295753b87b7",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3 4\n"
+     ]
+    }
+   ],
+   "source": [
+    "four1.prints()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "id": "11d440c9-4ff1-4ffa-869f-160350766484",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['__class__',\n",
+       " '__delattr__',\n",
+       " '__dict__',\n",
+       " '__dir__',\n",
+       " '__doc__',\n",
+       " '__eq__',\n",
+       " '__format__',\n",
+       " '__ge__',\n",
+       " '__getattribute__',\n",
+       " '__getstate__',\n",
+       " '__gt__',\n",
+       " '__hash__',\n",
+       " '__init__',\n",
+       " '__init_subclass__',\n",
+       " '__le__',\n",
+       " '__lt__',\n",
+       " '__module__',\n",
+       " '__ne__',\n",
+       " '__new__',\n",
+       " '__reduce__',\n",
+       " '__reduce_ex__',\n",
+       " '__repr__',\n",
+       " '__setattr__',\n",
+       " '__sizeof__',\n",
+       " '__str__',\n",
+       " '__subclasshook__',\n",
+       " '__weakref__',\n",
+       " 'first',\n",
+       " 'prints',\n",
+       " 'second',\n",
+       " 'setdata']"
+      ]
+     },
+     "execution_count": 37,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dir(four1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 86,
+   "id": "e16b1c0d-3859-485c-9567-af9d4d7e8b09",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 예제1\n",
+    "\n",
+    "class DDuk:\n",
+    "    def __init__(self, won, ea):\n",
+    "        self.won = won\n",
+    "        self.ea = ea\n",
+    "\n",
+    "    def dduk(self):\n",
+    "        result = self.won * self.ea\n",
+    "        print(f\"배가고파서 떡볶이집에서 떡볶이를 {result}원어치 먹었다.\")\n",
+    "\n",
+    "    def odeng(self):\n",
+    "        result = self.won * self.ea\n",
+    "        print(f\"배가고파서 떡볶이집에서 오뎅을 {result}원어치 먹었다.\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 87,
+   "id": "b782284d-c2f0-4155-9d5f-08cf72efa2f2",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "재형 = DDuk(2500,4)\n",
+    "호성 = DDuk(1500,7)\n",
+    "재훈 = DDuk(2000,5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 88,
+   "id": "036468ff-d683-4ce0-ac66-15da137adeb8",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "배가고파서 떡볶이집에서 떡볶이를 10000원어치 먹었다.\n",
+      "배가고파서 떡볶이집에서 오뎅을 10000원어치 먹었다.\n"
+     ]
+    }
+   ],
+   "source": [
+    "재형.dduk()\n",
+    "재형.odeng()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 89,
+   "id": "0ba4e0f1-f6c4-43f0-8d41-a143795e93ec",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "배가고파서 떡볶이집에서 떡볶이를 10500원어치 먹었다.\n",
+      "배가고파서 떡볶이집에서 오뎅을 10500원어치 먹었다.\n"
+     ]
+    }
+   ],
+   "source": [
+    "호성.dduk()\n",
+    "호성.odeng()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 90,
+   "id": "20bba16f-2f9b-4e3a-99f3-6d781b647702",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "배가고파서 떡볶이집에서 떡볶이를 10000원어치 먹었다.\n",
+      "배가고파서 떡볶이집에서 오뎅을 10000원어치 먹었다.\n"
+     ]
+    }
+   ],
+   "source": [
+    "재훈.dduk()\n",
+    "재훈.odeng()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 78,
+   "id": "fde4ebf0-e1b4-4989-9d7b-a71f547cd9f6",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 예제2\n",
+    "class Pet:\n",
+    "    def __init__(self, name, species):\n",
+    "        \"\"\"펫을 생성\"\"\"\n",
+    "        self.name = name\n",
+    "        self.species = species\n",
+    "        self.hunger = 50 # 배고픔 수치 0 ~ 100\n",
+    "    def feed(self, many = 10):\n",
+    "        \"\"\"밥을 주면 배고픔 감소\"\"\"\n",
+    "        if self.hunger > 10:\n",
+    "            self.hunger -= many\n",
+    "        return f\"{self.name}에게 밥을 줬어요. 배고픔:{self.hunger}\"\n",
+    "    def play(self, how = 20):\n",
+    "        \"\"\"놀아주면 배고픔 증가\"\"\"\n",
+    "        if self.hunger < 80:\n",
+    "            self.hunger += how\n",
+    "        return f\"{self.name}와 잘 놀았어요~!! 배고픔:{self.hunger}\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 79,
+   "id": "9d27f39d-ed6c-4b0a-a1cb-6f046cc8312d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dog1 = Pet(\"뽀삐\",\"말티즈\")\n",
+    "dog2 = Pet(\"강쥐\",\"허숙히\")\n",
+    "cat1 = Pet(\"컁이\",\"도둑고양이\")\n",
+    "cat2 = Pet(\"킁이\",\"집고양이\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 80,
+   "id": "9d73a44a-1c27-4835-9aa9-9ab98b2aaa8f",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'컁이에게 밥을 줬어요. 배고픔:30'"
+      ]
+     },
+     "execution_count": 80,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "cat1.feed(20)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 81,
+   "id": "e2e3ed14-2865-4be2-9087-3ddb5c0e1c97",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'컁이와 잘 놀았어요~!! 배고픔:60'"
+      ]
+     },
+     "execution_count": 81,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "cat1.play(30)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 82,
+   "id": "1584c5de-26b4-45f0-98ac-76c599834c8a",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "컁이에게 밥을 줬어요. 배고픔:50\n",
+      "컁이와 잘 놀았어요~!! 배고픔:70\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(cat1.feed())\n",
+    "print(cat1.play())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f79f37ce-633c-4838-9d47-5a87f4898447",
    "metadata": {},
    "outputs": [],
    "source": []
